fixed align

--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -24,6 +24,9 @@ body{
     display: flex;
     flex-direction: column;
 }
+.screen h2{
+    align-items: flex-end;
+}
 .calculator{
     margin: 10px 50px;
 }
